# realtime-db-backup

./: readme.md
kafka-container/: docker-compose.yaml  x.yaml
postgre-container/: docker-compose.yaml
postgre-container/postgres_data/: pg_hba.conf  postgresql.conf
scripts/: config.py  consumer.py  producer.py  pyproject.toml  test_consumer.ipynb
scripts/config/: default_config.yaml
